...
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageToGuessCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

...
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backToGuessPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/next_guess"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageToGuessCardZoomedIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/hotbarView"
        style="?android:attr/progressBarStyleHorizontal"
...
        android:max="100"
        android:progress="100"
        android:progressTint="#FF0000"
        android:scaleX="2"
        android:scaleY="8"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/compassMode"
        app:layout_constraintEnd_toEndOf="@+id/compassMode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/compassMode" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/floating_point_margin"
        android:layout_marginBottom="@dimen/floating_point_margin"
        android:clickable="true"
        android:contentDescription="@string/content_descr_confirm_button_image"
...
