<resources>
    <string name="app_name">Wnder</string>

    <!--Multiple usage-->
    <string name="no_connection">No internet connection !</string>
    <string name="no_internet_body">Your internet connection was lost, please try again later</string>
    <string name="guest_not_allowed">Feature not available as Guest user!</string>
    <string name="distance_meter">%1$d m</string>
    <string name="distance_kilometer">%1$d km</string>

    <!--Login Activity Strings-->
    <string name="logout">Logout</string>
    <string name="nbr_of_guesses_string">pictures guessed.</string>
    <string name="average_score_string">of average score.</string>
    <string name="total_score_string">of total score.</string>
    <string name="not_signed_in_stats">You must sign in and get an internet connection to see your stats.</string>

    <!--Main Activity Strings -->
    <string name="content_descr_profile_picture">Profile picture</string>
    <string name="set_radius">Radius: %1$dkm</string>
    <string name="no_internet_guess">You cannot guess pictures without an internet connection.</string>

    <!--Mapbox Image for Layers Strings-->
    <string name="GUESS_SOURCE_ID">guess-source-id</string>
    <string name="GUESS_LAYER_ID">guess-layer-id</string>
    <string name="GUESS_ICON_ID">guess-icon-id</string>
    <string name="PICTURE_SOURCE_ID">picture-source-id</string>
    <string name="PICTURE_LAYER_ID">picture-layer-id</string>
    <string name="PICTURE_ICON_ID">picture-icon-id</string>
    <string name="ORANGE_ARROW_SOURCE_ID">orange-arrow-source-id</string>
    <string name="ORANGE_ARROW_LAYER_ID">orange-arrow-layer-id</string>
    <string name="ORANGE_ARROW_ICON_ID">orange-arrow-icon-id</string>
    <string name="RED_CIRCLE_SOURCE_ID">red-circle-source-id</string>
    <string name="RED_CIRCLE_LAYER_ID">red-circle-layer-id</string>

    <!--Guess Preview Strings-->
    <string name="content_descr_wnder_logo">This is the Wnder logo</string>
    <string name="content_descr_wnder_topBar">This is the top bar hosting the Wnder logo</string>
    <string name="content_descr_guess_preview_image">This is the image shown on the guess preview activity</string>
    <string name="report">Report</string>
    <string name="help">Help</string>
    <string name="popup_menu">Popup menu</string>
    <string name="report_confirm_title">You are about to report an image</string>
    <string name="report_confirm_message">Only images that are impossible to guess or inappropriate should be reported.\nPlease do not report images that you simply don\'t like</string>
    <string name="bar_save_is_impossible">"Impossible to save this picture."</string>
    <string name="bar_save_is_ok">"This picture has been saved."</string>
    <string name="help_title">"Actions possible:"</string>
    <string name="help_body">"Guess: Click on the lower button if you want to guess it's location. \n\nSkip: " +
                "Swipe left to skip the actual image and search an other one."</string>
    <string name="bar_report">"This picture has been reported."</string>

    <!--Guess Location Strings-->
    <string name="finished_tour">Tour finished.\nWell done!</string>
    <string name="tour_score_text">%1$d/%2$d\nPictures found</string>
    <string name="guess_simple_mode">guess_simple_mode</string>
    <string name="guess_tour_mode">guess_tour_mode</string>
    <string name="content_descr_compass_button_image">This is the image shown on the compass button</string>
    <string name="content_descr_confirm_button_image">This is the image shown on the confirm button</string>
    <string name="mapClickOnCompassMode_confirm_title">You are in Compass Mode</string>
    <string name="mapClickOnCompassMode_confirm_message">In Compass Mode you are supposed to walk to the picture location you are currently guessing.\nExit the Compass Mode if you want to simply guess by clicking</string>
    <string name="guess_location_distance_meter">Distance: %1$d m</string>
    <string name="guess_location_distance_kilometer">Distance: %1$d km</string>
    <string name="score">Score: %1$d</string>
    <string name="next_guess">NEXT GUESS</string>
    <string name="tour_mode_confirm_while_far_title">You are about to skip a picture</string>
    <string name="tour_mode_confirm_while_far_text">You did not find this picture yet.\nAre you sure you want to skip this picture and go to the next one?</string>

    <!--History Strings-->
    <string name="content_descr_history_image">Previously guessed picture</string>
    <string name="content_descr_history_location">Location icon</string>
    <string name="content_descr_history_scoreboard">Scoreboard icon</string>
    <string name="default_distance">0m</string>
    <string name="default_score">0.0</string>

    <!--History Map Strings-->
    <string name="content_descr_history_map_image">Map with guess and actual location</string>

    <!--Scoreboard strings-->
    <string name="scoreboard_username_placeholder">Username</string>
    <string name="scoreboard_score_placeholder">Score</string>
    <string name="scoreboard_rank_placeholder">1</string>
    <string name="go_back">Return</string>

    <!--Take Picture Strings-->
    <string name="content_descr_picture_taken">Your picture</string>
    <string name="content_descr_take_picture_button">Take picture image button</string>
    <string name="content_descr_upload_button">Upload image button</string>
    <string name="content_descr_activate_tour">Activates tour mode</string>
    <string name="tour_name">Tour name</string>
    <string name="guest_no_upload">Please log in before taking a picture.</string>
    <string name="upload_later">It seems you are not connected to the internet, your uploads will resume once you are connected again.</string>
    <string name="upload_started">Upload started.</string>
    <string name="upload_not_started">Upload failed to start.</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="upload_successful">Your picture was successfully uploaded!</string>
    <string name="validate_tour">Validate tour</string>

    <!--Image From Gallery Strings-->
    <string name="SensorNotAvailableTitle">Sensor not available</string>
    <string name="SensorNotAvailable">The sensor to get information about the phone 3D position is not available. You can\'t access the compass mode.</string>
    <string name="save_to_gallery">Save to gallery</string>

    <!--Navigation Activity Strings-->
    <string name="profile_destination">Profile</string>
    <string name="guess_destination">Guess</string>
    <string name="history_destination">History</string>
    <string name="take_picture_destination">Upload</string>
    <string name="guess_a_new_image">Guess a new image</string>
    <string name="begin_guess">Guess</string>
    <string name="bar_report_impossible">The report process failed</string>
    <string name="bar_download_picture_failed">Download failed</string>
    <string name="start_a_tour">Start a tour</string>

    <string name="gps_access_title">GPS access</string>
    <string name="gps_access_body">The GPS is needed to access all the functionalities of the app.</string>
    <string name="gps_disabled_title">GPS is disabled</string>
    <string name="gps_disabled_body">Please, activate your GPS to access all the functionalities.</string>
    <string name="gps_missing_title">Functionality unavailable</string>
    <string name="gps_missing_body">The application needs the GPS to continue.</string>
    <string name="guest_tour_forbidden">Guest user are not allowed to upload tour</string>
    <string name="failed_tour_picture_upload">One picture failed to be uploaded</string>
    <string name="tour_uploaded">Your tour was successfully uploaded.</string>
    <string name="tour_upload_failed">The upload of the tour failed.</string>

    <!--Tour Activity Strings-->
    <string name="content_descr_tour_first_pic">First picture of the tour</string>
    <string name="content_descr_tour_pic_count_icon">Tour picture count icon</string>
    <string name="content_descr_tour_distance_icon">Tour distance icon</string>
    <string name="content_descr_tour_length_icon">Tour length icon</string>
</resources>
